--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
+    "react-toastify": "^11.0.5",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "zustand": "^5.0.3"
